[package]
edition = "2021"
name = "que"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy-web-resizer = "2.0.0"
bevy_asset_loader = {version = "0.10", features = ["2d"]}
bevy_console = "0.3"
bevy_mod_debugdump = "0.4"
bevy_ninepatch = "0.7"
bevy_prototype_lyon = "0.5"
interpolation = "0.2"
lazy_static = "1.4"
rand = "0.8"
ron = "0.7"
serde = {version = "1", features = ["derive"]}
wasm-bindgen = "0.2.74"

[dependencies.bevy]
default-features = false
version = "0.7"
# These are the remaining default features other than `bevy_audio` and `mp3`
features = [
  "render",
  "bevy_winit", # "bevy_gilrs", 
  "png", # "hdr",  # "filesystem_watcher",  # "x11"
]

[dependencies.bevy_kira_audio]
version = "0.10"
# `ogg` format support is enabled by default, disable if you don't want it
default-features = false
# enable the features you care about
features = [
  "wav", # "flac",
  "mp3", # "ogg",
]

[dependencies.web-sys]
features = [
  # 'Document',
  # 'Element',
  # 'HtmlElement',
  # 'Node',
  'Window',
]
version = "0.3.4"

[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
